--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
   
   steps:
-      - name: Checkout-Code
+      - name: checkout-code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
