--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,24 +1,24 @@
 # https://www.freecodecamp.org/news/github-super-linter/
 
-name: Lint
+name: lint
 
 on: [push, pull_request]
 
 jobs:
   build:
-    name: Lint
+    name: lint
     runs-on: ubuntu-latest
   
   steps:
-      - name: checkout-code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+    - name: checkout-code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
-      - name: Lint
-        uses: github/super-linter@v4
-        env:
-          VALIDATE_ALL_CODEBASE: true
-          VALIDATE_PYTHON_BLACK: true
-          VALIDATE_PYTHON_FLAKE8: true
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: lint
+      uses: github/super-linter@v4
+      env:
+        VALIDATE_ALL_CODEBASE: true
+        VALIDATE_PYTHON_BLACK: true
+        VALIDATE_PYTHON_FLAKE8: true
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
