--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -2,7 +2,7 @@
 
 name: Lint Code Base
 
-on: [push, pull_request]
+on: push
 
 jobs:
   build:
@@ -27,4 +27,5 @@ jobs:
         env:
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_PYTHON_BLACK: true
+          VALIDATE_PYTHON_FLAKE8: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
