--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -24,6 +24,14 @@ jobs:
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
+      - name: Code formater black
+      - uses: psf/black@stable
+        with:
+          options: "--check --verbose"
+          src: "."
+          jupyter: true
+          version: "~= 22.0"
+
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
