--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -26,12 +26,8 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Code formater black
-        run: psf/black@stable
-        with:
-          options: "--check --verbose"
-          src: "."
-          jupyter: true
-          version: "~= 22.0"
+        run: |
+        black . --check --verbose --ipynb 
 
       - name: Lint with flake8
         run: |
