--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,34 @@
+[metadata]
+name = your name
+description = your description
+author = Marceli Górski
+license = MIT
+license_file = LICENSE
+platforms = linux
+classifiers =
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11 :: Only
+
+[options]
+packages =
+    src
+install_requires =
+    requests>=2
+python_requires = >=3.6
+zip_safe = no
+
+[options.extras_require]
+testing =
+    pytest>=7.0
+    pytest-cov>=2.0
+    mypy>=1.0
+    flake8>=4.0
+    tox>=4.4
+
+[options.package_data]
+src = py.typed
+
+
 [flake8]
 # Base flake8 configuration:
 # https://flake8.pycqa.org/en/latest/user/configuration.html
@@ -16,12 +47,18 @@ exclude =
   *.egg
 
 ignore =
-  RST306    # unknown target name - arg with underscore. Until: https://github.com/peterjc/flake8-rst-docstrings/issues/26
-  W503      # joining strings with plus sing
-  WPS115    # upper-case constant - fine as class variables
-  WPS305    # f-strings are fine
-  WPS306    # default inheritance from `object`
-  WPS602    # static methods are fine
+  # unknown target name - arg with underscore. Until: https://github.com/peterjc/flake8-rst-docstrings/issues/26
+  RST306,
+  # joining strings with plus sing
+  W503,
+  # upper-case constant - fine as class variables
+  WPS115,
+  # f-strings are fine
+  WPS305,
+  # default inheritance from `object`
+  WPS306,
+  # static methods are fine
+  WPS602,
 
 per-file-ignores =
   */__init__.py:
