--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,6 +1,8 @@
 black==22.12.0
 pre-commit==2.21.0
 isort==5.12.0
-colorama==0.4.3
+colorama==0.4.6
 flake8==4.0.1
 tox==4.4.6
+pytest==6.2.5
+pytest-cov==2.12.1
