--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,13 @@
 [tox]
 requires =
     tox>=4
-env_list = py{310, 311}, flake8, black, mypy
+env_list = py{310, 311}, flake8, black, mypy, isort
 isolated_build = true
 
 [gh-actions]
 python = 
-    3.10: py310, flake8, black, mypy
-    3.11: py311, flake8, black, mypy
+    3.10: py310, flake8, black, mypy, isort
+    3.11: py311, flake8, black, mypy, isort
 
 [testenv]
 description = test enviroments
@@ -20,18 +20,24 @@ commands = pytest --basetemp={envtmpdir}
 description = check format code
 skip_install = true
 extras = style
-commands = black --check {posargs:src tests}
+commands = black --check --diff --color {posargs:src tests}
+
+[testenv:isort]
+description = check imports alphabetically
+skip_install = true
+extras = style
+commands = isort --check --diff --color {posargs:src tests}
 
 [testenv:flake8]
 description = check style code
 skip_install = true
 deps = flake8
 extras = style
-commands = flake8 {posargs:src tests}
+commands = flake8 --count --disable-noqa --statistics {posargs:src tests}
 
 [testenv:mypy]
 description = check issues to solve
 skip_install = true
-deps = mypy
+deps = mypy 
 extras = style
-commands = mypy {posargs:src tests}
+commands = mypy --show-absolute-path --show-column-numbers --show-error-context --pretty {posargs:src tests}
