--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,10 @@
         "--line-length",
         "79"
     ],
+    "python.linting.enabled": true,
+    "python.linting.flake8Enabled": true,
+    // "python.linting.flake8Args": ["--ignore=E24,W504", "--verbose"],
+    // "python.linting.pydocstyleArgs": ["--ignore=D400", "--ignore=D4"],
     "terminal.integrated.fontSize": 16,
     "editor.formatOnSave": true,
     "editor.rulers": [
