--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,17 @@
 {
     "python.terminal.activateEnvironment": true,
     "python.analysis.autoImportCompletions": true,
-    "python.formatting.provider": "black",
+    "python.formatting.provider": "none",
     "python.formatting.blackArgs": [
         "--line-length",
         "79"
     ],
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
-    // "python.linting.flake8Args": ["--ignore=E24,W504", "--verbose"],
-    // "python.linting.pydocstyleArgs": ["--ignore=D400", "--ignore=D4"],
+    "python.linting.flake8Args": [
+        "--max-line-length=120",
+        "--ignore=E402,F841,F401,E302,E305,E203",
+    ],
     "terminal.integrated.fontSize": 16,
     "editor.formatOnSave": true,
     "editor.rulers": [
@@ -22,4 +24,7 @@
         "~/.local/lib/Google/google_appengine",
         "~/.local/lib/Google/google_appengine/lib/flask-0.12"
     ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
 }
